--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Quinn Michaels",
   "license": "MIT",
   "copyright": "2023",
-  "description": "The Development Deva",
+  "description": "The Development Deva is in @DEVELOPMENT creating ideas.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
